--- a/frontendSrc/index.html
+++ b/frontendSrc/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>MEAN2Template</title>
+  <title>DashTube</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
